Build Java 8 mixed-agent capture foundation