@@ -2,10 +2,7 @@ package automation.harness.agent;
 
 import java.util.UUID;
 
-/**
- * Deliberately small agent bootstrap. Transport and adapters are supplied by
- * the host application's Java integration.
- */
+/** Java 8 compatible bootstrap for Swing/AWT/JOGL targets such as MSCT. */
 public final class AutomationAgent {
     private static volatile AgentServer server;
     private AutomationAgent() { }
@@ -15,8 +12,8 @@ public final class AutomationAgent {
         String token = argument(arguments, "token");
         String port = argument(arguments, "port");
         String discovery = argument(arguments, "discovery");
-        if (token == null || token.isBlank()) token = UUID.randomUUID().toString();
-        if (port == null || port.isBlank()) port = "0";
+        if (token == null || token.trim().isEmpty()) token = UUID.randomUUID().toString();
+        if (port == null || port.trim().isEmpty()) port = "0";
         try {
             server = new AgentServer(token, Integer.parseInt(port), discovery);
             RuntimeDiagnostics.write(discovery);
@@ -25,20 +22,10 @@ public final class AutomationAgent {
         }
     }
 
-    /** Entry point used by the JavaFX event adapter before snapshotting. */
-    public static JavaFxSemanticTargetResolver.Resolution resolveSemanticTarget(Object physicalTarget) {
-        return JavaFxSemanticTargetResolver.resolveSemanticTarget(physicalTarget);
-    }
-
-    /** JavaFX adapters publish already-normalized, compact event maps here. */
-    public static void recordJavaFxEvent(java.util.Map<String, Object> event) {
-        AgentServer current = server;
-        if (current != null) current.recording().offer(event);
-    }
-
     private static String argument(String arguments, String key) {
         if (arguments == null) return null;
-        for (String part : arguments.split("[,;]")) {
+        String[] parts = arguments.split("[,;]");
+        for (String part : parts) {
             String[] pair = part.split("=", 2);
             if (pair.length == 2 && pair[0].trim().equals(key)) return pair[1].trim();
         }
